--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-form": "^0.33.0",
     "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-router": "^1.58.11",
     "@tanstack/react-table": "^8.20.5",
