--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@tanstack/react-table": "^8.20.5",
     "@tanstack/router-devtools": "^1.58.15",
     "formik": "^2.4.6",
+    "path": "^0.12.7",
+    "pdfjs-dist": "^4.6.82",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.3",
     "react": "^18.3.1",
     "react-axios": "^2.0.6",
     "react-dom": "^18.3.1",
+    "react-pdf": "^9.1.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.26.2",
     "sass": "^1.79.3",
@@ -39,6 +42,7 @@
     "globals": "^15.9.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vite-plugin-static-copy": "^1.0.6"
   }
 }
