--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-router": "^1.58.11",
     "@tanstack/react-table": "^8.20.5",
     "@tanstack/router-devtools": "^1.58.15",
+    "@tanstack/zod-form-adapter": "^0.33.0",
     "formik": "^2.4.6",
     "path": "^0.12.7",
     "pdfjs-dist": "^4.6.82",
